xsm_expl/stage_6_makefile/task_1/y.output
   0  $accept : program $end

   1  program : TypeDefBlock GdeclBlock FdefBlock MainBlock
   2          | GdeclBlock MainBlock
   3          | TypeDefBlock GdeclBlock MainBlock
   4          | MainBlock

   5  TypeDefBlock : TYPE TypeDefList ENDTYPE
   6               |

   7  TypeDefList : TypeDefList TypeDef
   8              | TypeDef

   9  TypeDef : ID '{' FieldDeclList '}'

  10  FieldDeclList : FieldDeclList FieldDecl
  11                | FieldDecl

  12  FieldDecl : TypeName ID COLON

  13  GdeclBlock : DECL GdeclList ENDDECL
  14             | DECL ENDDECL

  15  GdeclList : GdeclList GDecl
  16            | GDecl

  17  GDecl : TypeName GidList COLON

  18  GidList : GidList COMMA Gid
  19          | Gid

  20  Gid : ID
  21      | ID '[' NUM ']'
  22      | ID '(' GParamList ')'

  23  FdefBlock : FdefBlock Fdef
  24            | Fdef

  25  Fdef : TypeName ID '(' ParamList ')' '{' LdeclBlock Body '}'

  26  LdeclBlock : DECL LDeclList ENDDECL
  27             | DECL ENDDECL

  28  LDeclList : LDeclList LDecl
  29            | LDecl

  30  LDecl : TypeName IdList COLON

  31  IdList : IdList COMMA ID
  32         | ID

  33  Body : START Slist END

  34  ParamList : ParamList COMMA Param
  35            | Param
  36            |

  37  Param : TypeName ID

  38  GParamList : GParamList COMMA GParam
  39             | GParam
  40             |

  41  GParam : TypeName ID

  42  MainBlock : INT MAIN '(' ')' '{' LdeclBlock Body '}'

  43  Slist : Slist Stmt
  44        | Stmt

  45  Stmt : InputStmt
  46       | OutputStmt
  47       | AsgStmt
  48       | IfStmt
  49       | WhileStmt
  50       | BreakStmt
  51       | ContinueStmt
  52       | Retstmt
  53       | FreeStmt

  54  IfStmt : IF expr THEN Slist ELSE Slist ENDIF COLON
  55         | IF expr THEN Slist ENDIF COLON

  56  WhileStmt : WHILE expr DO Slist ENDWHILE COLON

  57  InputStmt : READ expr COLON

  58  OutputStmt : WRITE expr COLON
  59             | WRITE String COLON

  60  AsgStmt : expr ASSG expr COLON
  61          | expr ASSG String COLON

  62  BreakStmt : BREAK COLON

  63  ContinueStmt : CONT COLON

  64  FreeStmt : FREE expr COLON

  65  Retstmt : RETURN expr COLON

  66  String : '(' STRING_TYPE ')'
  67         | STRING_TYPE

  68  expr : expr PLUS expr
  69       | expr MINUS expr
  70       | expr DIV expr
  71       | expr MUL expr
  72       | expr MOD expr
  73       | '(' expr ')'
  74       | expr LT expr
  75       | expr LE expr
  76       | expr GT expr
  77       | expr GE expr
  78       | expr EQ expr
  79       | expr NE expr
  80       | expr OR expr
  81       | expr AND expr
  82       | NUM
  83       | ID
  84       | ID '[' expr ']'
  85       | ID '(' ')'
  86       | ID '(' ArgList ')'
  87       | Field
  88       | ALLOC '(' ')'

  89  Field : Field '.' ID
  90        | ID '.' ID

  91  ArgList : ArgList COMMA expr
  92          | expr

  93  TypeName : INT
  94           | STR
  95           | ID

0: shift/reduce conflict (shift 2, reduce 6) on DECL
state 0
	$accept : . program $end  (0)
	TypeDefBlock : .  (6)

	INT  shift 1
	DECL  shift 2
	TYPE  shift 3

	program  goto 4
	TypeDefBlock  goto 5
	GdeclBlock  goto 6
	MainBlock  goto 7


state 1
	MainBlock : INT . MAIN '(' ')' '{' LdeclBlock Body '}'  (42)

	MAIN  shift 8
	.  error


state 2
	GdeclBlock : DECL . GdeclList ENDDECL  (13)
	GdeclBlock : DECL . ENDDECL  (14)

	ID  shift 9
	INT  shift 10
	STR  shift 11
	ENDDECL  shift 12
	.  error

	TypeName  goto 13
	GdeclList  goto 14
	GDecl  goto 15


state 3
	TypeDefBlock : TYPE . TypeDefList ENDTYPE  (5)

	ID  shift 16
	.  error

	TypeDefList  goto 17
	TypeDef  goto 18


state 4
	$accept : program . $end  (0)

	$end  accept


state 5
	program : TypeDefBlock . GdeclBlock FdefBlock MainBlock  (1)
	program : TypeDefBlock . GdeclBlock MainBlock  (3)

	DECL  shift 2
	.  error

	GdeclBlock  goto 19


state 6
	program : GdeclBlock . MainBlock  (2)

	INT  shift 1
	.  error

	MainBlock  goto 20


state 7
	program : MainBlock .  (4)

	.  reduce 4


state 8
	MainBlock : INT MAIN . '(' ')' '{' LdeclBlock Body '}'  (42)

	'('  shift 21
	.  error


state 9
	TypeName : ID .  (95)

	.  reduce 95


state 10
	TypeName : INT .  (93)

	.  reduce 93


state 11
	TypeName : STR .  (94)

	.  reduce 94


state 12
	GdeclBlock : DECL ENDDECL .  (14)

	.  reduce 14


state 13
	GDecl : TypeName . GidList COLON  (17)

	ID  shift 22
	.  error

	GidList  goto 23
	Gid  goto 24


state 14
	GdeclBlock : DECL GdeclList . ENDDECL  (13)
	GdeclList : GdeclList . GDecl  (15)

	ID  shift 9
	INT  shift 10
	STR  shift 11
	ENDDECL  shift 25
	.  error

	TypeName  goto 13
	GDecl  goto 26


state 15
	GdeclList : GDecl .  (16)

	.  reduce 16


state 16
	TypeDef : ID . '{' FieldDeclList '}'  (9)

	'{'  shift 27
	.  error


state 17
	TypeDefBlock : TYPE TypeDefList . ENDTYPE  (5)
	TypeDefList : TypeDefList . TypeDef  (7)

	ID  shift 16
	ENDTYPE  shift 28
	.  error

	TypeDef  goto 29


state 18
	TypeDefList : TypeDef .  (8)

	.  reduce 8


state 19
	program : TypeDefBlock GdeclBlock . FdefBlock MainBlock  (1)
	program : TypeDefBlock GdeclBlock . MainBlock  (3)

	ID  shift 9
	INT  shift 30
	STR  shift 11
	.  error

	TypeName  goto 31
	FdefBlock  goto 32
	MainBlock  goto 33
	Fdef  goto 34


state 20
	program : GdeclBlock MainBlock .  (2)

	.  reduce 2


state 21
	MainBlock : INT MAIN '(' . ')' '{' LdeclBlock Body '}'  (42)

	')'  shift 35
	.  error


state 22
	Gid : ID .  (20)
	Gid : ID . '[' NUM ']'  (21)
	Gid : ID . '(' GParamList ')'  (22)

	'['  shift 36
	'('  shift 37
	COLON  reduce 20
	COMMA  reduce 20


state 23
	GDecl : TypeName GidList . COLON  (17)
	GidList : GidList . COMMA Gid  (18)

	COLON  shift 38
	COMMA  shift 39
	.  error


state 24
	GidList : Gid .  (19)

	.  reduce 19


state 25
	GdeclBlock : DECL GdeclList ENDDECL .  (13)

	.  reduce 13


state 26
	GdeclList : GdeclList GDecl .  (15)

	.  reduce 15


state 27
	TypeDef : ID '{' . FieldDeclList '}'  (9)

	ID  shift 9
	INT  shift 10
	STR  shift 11
	.  error

	TypeName  goto 40
	FieldDeclList  goto 41
	FieldDecl  goto 42


state 28
	TypeDefBlock : TYPE TypeDefList ENDTYPE .  (5)

	.  reduce 5


state 29
	TypeDefList : TypeDefList TypeDef .  (7)

	.  reduce 7


state 30
	MainBlock : INT . MAIN '(' ')' '{' LdeclBlock Body '}'  (42)
	TypeName : INT .  (93)

	MAIN  shift 8
	ID  reduce 93


state 31
	Fdef : TypeName . ID '(' ParamList ')' '{' LdeclBlock Body '}'  (25)

	ID  shift 43
	.  error


state 32
	program : TypeDefBlock GdeclBlock FdefBlock . MainBlock  (1)
	FdefBlock : FdefBlock . Fdef  (23)

	ID  shift 9
	INT  shift 30
	STR  shift 11
	.  error

	TypeName  goto 31
	MainBlock  goto 44
	Fdef  goto 45


state 33
	program : TypeDefBlock GdeclBlock MainBlock .  (3)

	.  reduce 3


state 34
	FdefBlock : Fdef .  (24)

	.  reduce 24


state 35
	MainBlock : INT MAIN '(' ')' . '{' LdeclBlock Body '}'  (42)

	'{'  shift 46
	.  error


state 36
	Gid : ID '[' . NUM ']'  (21)

	NUM  shift 47
	.  error


state 37
	Gid : ID '(' . GParamList ')'  (22)
	GParamList : .  (40)

	ID  shift 9
	INT  shift 10
	STR  shift 11
	COMMA  reduce 40
	')'  reduce 40

	TypeName  goto 48
	GParamList  goto 49
	GParam  goto 50


state 38
	GDecl : TypeName GidList COLON .  (17)

	.  reduce 17


state 39
	GidList : GidList COMMA . Gid  (18)

	ID  shift 22
	.  error

	Gid  goto 51


state 40
	FieldDecl : TypeName . ID COLON  (12)

	ID  shift 52
	.  error


state 41
	TypeDef : ID '{' FieldDeclList . '}'  (9)
	FieldDeclList : FieldDeclList . FieldDecl  (10)

	ID  shift 9
	INT  shift 10
	STR  shift 11
	'}'  shift 53
	.  error

	TypeName  goto 40
	FieldDecl  goto 54


state 42
	FieldDeclList : FieldDecl .  (11)

	.  reduce 11


state 43
	Fdef : TypeName ID . '(' ParamList ')' '{' LdeclBlock Body '}'  (25)

	'('  shift 55
	.  error


state 44
	program : TypeDefBlock GdeclBlock FdefBlock MainBlock .  (1)

	.  reduce 1


state 45
	FdefBlock : FdefBlock Fdef .  (23)

	.  reduce 23


state 46
	MainBlock : INT MAIN '(' ')' '{' . LdeclBlock Body '}'  (42)

	DECL  shift 56
	.  error

	LdeclBlock  goto 57


state 47
	Gid : ID '[' NUM . ']'  (21)

	']'  shift 58
	.  error


state 48
	GParam : TypeName . ID  (41)

	ID  shift 59
	.  error


state 49
	Gid : ID '(' GParamList . ')'  (22)
	GParamList : GParamList . COMMA GParam  (38)

	COMMA  shift 60
	')'  shift 61
	.  error


state 50
	GParamList : GParam .  (39)

	.  reduce 39


state 51
	GidList : GidList COMMA Gid .  (18)

	.  reduce 18


state 52
	FieldDecl : TypeName ID . COLON  (12)

	COLON  shift 62
	.  error


state 53
	TypeDef : ID '{' FieldDeclList '}' .  (9)

	.  reduce 9


state 54
	FieldDeclList : FieldDeclList FieldDecl .  (10)

	.  reduce 10


state 55
	Fdef : TypeName ID '(' . ParamList ')' '{' LdeclBlock Body '}'  (25)
	ParamList : .  (36)

	ID  shift 9
	INT  shift 10
	STR  shift 11
	COMMA  reduce 36
	')'  reduce 36

	TypeName  goto 63
	ParamList  goto 64
	Param  goto 65


state 56
	LdeclBlock : DECL . LDeclList ENDDECL  (26)
	LdeclBlock : DECL . ENDDECL  (27)

	ID  shift 9
	INT  shift 10
	STR  shift 11
	ENDDECL  shift 66
	.  error

	TypeName  goto 67
	LDeclList  goto 68
	LDecl  goto 69


state 57
	MainBlock : INT MAIN '(' ')' '{' LdeclBlock . Body '}'  (42)

	START  shift 70
	.  error

	Body  goto 71


state 58
	Gid : ID '[' NUM ']' .  (21)

	.  reduce 21


state 59
	GParam : TypeName ID .  (41)

	.  reduce 41


state 60
	GParamList : GParamList COMMA . GParam  (38)

	ID  shift 9
	INT  shift 10
	STR  shift 11
	.  error

	TypeName  goto 48
	GParam  goto 72


state 61
	Gid : ID '(' GParamList ')' .  (22)

	.  reduce 22


state 62
	FieldDecl : TypeName ID COLON .  (12)

	.  reduce 12


state 63
	Param : TypeName . ID  (37)

	ID  shift 73
	.  error


state 64
	Fdef : TypeName ID '(' ParamList . ')' '{' LdeclBlock Body '}'  (25)
	ParamList : ParamList . COMMA Param  (34)

	COMMA  shift 74
	')'  shift 75
	.  error


state 65
	ParamList : Param .  (35)

	.  reduce 35


state 66
	LdeclBlock : DECL ENDDECL .  (27)

	.  reduce 27


state 67
	LDecl : TypeName . IdList COLON  (30)

	ID  shift 76
	.  error

	IdList  goto 77


state 68
	LdeclBlock : DECL LDeclList . ENDDECL  (26)
	LDeclList : LDeclList . LDecl  (28)

	ID  shift 9
	INT  shift 10
	STR  shift 11
	ENDDECL  shift 78
	.  error

	TypeName  goto 67
	LDecl  goto 79


state 69
	LDeclList : LDecl .  (29)

	.  reduce 29


state 70
	Body : START . Slist END  (33)

	NUM  shift 80
	ID  shift 81
	ALLOC  shift 82
	FREE  shift 83
	READ  shift 84
	WRITE  shift 85
	IF  shift 86
	WHILE  shift 87
	BREAK  shift 88
	CONT  shift 89
	RETURN  shift 90
	'('  shift 91
	.  error

	expr  goto 92
	Slist  goto 93
	Stmt  goto 94
	InputStmt  goto 95
	OutputStmt  goto 96
	AsgStmt  goto 97
	IfStmt  goto 98
	WhileStmt  goto 99
	BreakStmt  goto 100
	ContinueStmt  goto 101
	FreeStmt  goto 102
	Retstmt  goto 103
	Field  goto 104


state 71
	MainBlock : INT MAIN '(' ')' '{' LdeclBlock Body . '}'  (42)

	'}'  shift 105
	.  error


state 72
	GParamList : GParamList COMMA GParam .  (38)

	.  reduce 38


state 73
	Param : TypeName ID .  (37)

	.  reduce 37


state 74
	ParamList : ParamList COMMA . Param  (34)

	ID  shift 9
	INT  shift 10
	STR  shift 11
	.  error

	TypeName  goto 63
	Param  goto 106


state 75
	Fdef : TypeName ID '(' ParamList ')' . '{' LdeclBlock Body '}'  (25)

	'{'  shift 107
	.  error


state 76
	IdList : ID .  (32)

	.  reduce 32


state 77
	LDecl : TypeName IdList . COLON  (30)
	IdList : IdList . COMMA ID  (31)

	COLON  shift 108
	COMMA  shift 109
	.  error


state 78
	LdeclBlock : DECL LDeclList ENDDECL .  (26)

	.  reduce 26


state 79
	LDeclList : LDeclList LDecl .  (28)

	.  reduce 28


state 80
	expr : NUM .  (82)

	.  reduce 82


state 81
	expr : ID .  (83)
	expr : ID . '[' expr ']'  (84)
	expr : ID . '(' ')'  (85)
	expr : ID . '(' ArgList ')'  (86)
	Field : ID . '.' ID  (90)

	'['  shift 110
	'('  shift 111
	'.'  shift 112
	PLUS  reduce 83
	MINUS  reduce 83
	MUL  reduce 83
	DIV  reduce 83
	MOD  reduce 83
	ASSG  reduce 83
	COLON  reduce 83
	LT  reduce 83
	LE  reduce 83
	GT  reduce 83
	GE  reduce 83
	EQ  reduce 83
	NE  reduce 83
	OR  reduce 83
	AND  reduce 83
	THEN  reduce 83
	DO  reduce 83
	COMMA  reduce 83
	']'  reduce 83
	')'  reduce 83


state 82
	expr : ALLOC . '(' ')'  (88)

	'('  shift 113
	.  error


state 83
	FreeStmt : FREE . expr COLON  (64)

	NUM  shift 80
	ID  shift 81
	ALLOC  shift 82
	'('  shift 91
	.  error

	expr  goto 114
	Field  goto 104


state 84
	InputStmt : READ . expr COLON  (57)

	NUM  shift 80
	ID  shift 81
	ALLOC  shift 82
	'('  shift 91
	.  error

	expr  goto 115
	Field  goto 104


state 85
	OutputStmt : WRITE . expr COLON  (58)
	OutputStmt : WRITE . String COLON  (59)

	NUM  shift 80
	ID  shift 81
	STRING_TYPE  shift 116
	ALLOC  shift 82
	'('  shift 117
	.  error

	expr  goto 118
	String  goto 119
	Field  goto 104


state 86
	IfStmt : IF . expr THEN Slist ELSE Slist ENDIF COLON  (54)
	IfStmt : IF . expr THEN Slist ENDIF COLON  (55)

	NUM  shift 80
	ID  shift 81
	ALLOC  shift 82
	'('  shift 91
	.  error

	expr  goto 120
	Field  goto 104


state 87
	WhileStmt : WHILE . expr DO Slist ENDWHILE COLON  (56)

	NUM  shift 80
	ID  shift 81
	ALLOC  shift 82
	'('  shift 91
	.  error

	expr  goto 121
	Field  goto 104


state 88
	BreakStmt : BREAK . COLON  (62)

	COLON  shift 122
	.  error


state 89
	ContinueStmt : CONT . COLON  (63)

	COLON  shift 123
	.  error


state 90
	Retstmt : RETURN . expr COLON  (65)

	NUM  shift 80
	ID  shift 81
	ALLOC  shift 82
	'('  shift 91
	.  error

	expr  goto 124
	Field  goto 104


state 91
	expr : '(' . expr ')'  (73)

	NUM  shift 80
	ID  shift 81
	ALLOC  shift 82
	'('  shift 91
	.  error

	expr  goto 125
	Field  goto 104


state 92
	AsgStmt : expr . ASSG expr COLON  (60)
	AsgStmt : expr . ASSG String COLON  (61)
	expr : expr . PLUS expr  (68)
	expr : expr . MINUS expr  (69)
	expr : expr . DIV expr  (70)
	expr : expr . MUL expr  (71)
	expr : expr . MOD expr  (72)
	expr : expr . LT expr  (74)
	expr : expr . LE expr  (75)
	expr : expr . GT expr  (76)
	expr : expr . GE expr  (77)
	expr : expr . EQ expr  (78)
	expr : expr . NE expr  (79)
	expr : expr . OR expr  (80)
	expr : expr . AND expr  (81)

	PLUS  shift 126
	MINUS  shift 127
	MUL  shift 128
	DIV  shift 129
	MOD  shift 130
	ASSG  shift 131
	LT  shift 132
	LE  shift 133
	GT  shift 134
	GE  shift 135
	EQ  shift 136
	NE  shift 137
	OR  shift 138
	AND  shift 139
	.  error


state 93
	Body : START Slist . END  (33)
	Slist : Slist . Stmt  (43)

	NUM  shift 80
	END  shift 140
	ID  shift 81
	ALLOC  shift 82
	FREE  shift 83
	READ  shift 84
	WRITE  shift 85
	IF  shift 86
	WHILE  shift 87
	BREAK  shift 88
	CONT  shift 89
	RETURN  shift 90
	'('  shift 91
	.  error

	expr  goto 92
	Stmt  goto 141
	InputStmt  goto 95
	OutputStmt  goto 96
	AsgStmt  goto 97
	IfStmt  goto 98
	WhileStmt  goto 99
	BreakStmt  goto 100
	ContinueStmt  goto 101
	FreeStmt  goto 102
	Retstmt  goto 103
	Field  goto 104


state 94
	Slist : Stmt .  (44)

	.  reduce 44


state 95
	Stmt : InputStmt .  (45)

	.  reduce 45

